scripts/nullness/annotator/url18cf99526f_anasbenis_MiniProjetMay_tgz-pJ8-test_MainJ8.txt
../annotator/url18cf99526f_anasbenis_MiniProjetMay_tgz-pJ8-test_MainJ8/src/Main.java:22: error: [dereference.of.nullable] dereference of possibly-null reference rt.init()
		rt.init().startInitStep();
		       ^
../annotator/url18cf99526f_anasbenis_MiniProjetMay_tgz-pJ8-test_MainJ8/src/Main.java:23: error: [dereference.of.nullable] dereference of possibly-null reference rt.eval()
		rt.eval().start();
		       ^
../annotator/url18cf99526f_anasbenis_MiniProjetMay_tgz-pJ8-test_MainJ8/src/question4/InitProcessImpl.java:16: error: [dereference.of.nullable] dereference of possibly-null reference requires().doAnnounce()
				requires().doAnnounce().startProcessFor(id);
				                     ^
../annotator/url18cf99526f_anasbenis_MiniProjetMay_tgz-pJ8-test_MainJ8/src/question4/InitProcessFollowerImpl.java:16: error: [dereference.of.nullable] dereference of possibly-null reference requires().getInit()
				requires().getInit().startInitStep();
				                  ^
../annotator/url18cf99526f_anasbenis_MiniProjetMay_tgz-pJ8-test_MainJ8/src/question3/StartEvalImpl.java:14: error: [dereference.of.nullable] dereference of possibly-null reference requires().validateService()
				double res = requires().validateService().evalAndValidate();
				                                       ^
../annotator/url18cf99526f_anasbenis_MiniProjetMay_tgz-pJ8-test_MainJ8/src/question2/impl2/PrintImpl2.java:32: error: [dereference.of.nullable] dereference of possibly-null reference out
						out.close();
						^
../annotator/url18cf99526f_anasbenis_MiniProjetMay_tgz-pJ8-test_MainJ8/src/test/Main.java:31: error: [dereference.of.nullable] dereference of possibly-null reference rt.init()
		rt.init().startInitStep();
		       ^
../annotator/url18cf99526f_anasbenis_MiniProjetMay_tgz-pJ8-test_MainJ8/src/test/Main.java:32: error: [dereference.of.nullable] dereference of possibly-null reference rt.eval()
		rt.eval().start();
		       ^
../annotator/url18cf99526f_anasbenis_MiniProjetMay_tgz-pJ8-test_MainJ8/src/question5/IdEvalThenStoreImpl.java:17: error: [dereference.of.nullable] dereference of possibly-null reference requires().compReq()
				return requires().compReq().eval(requires().idReq().getIDLabel());
				                         ^
9 errors
